<resources>
    <string name="app_name">TODOING</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="changerListe">Changer de liste</string>
    <string name="changerEquipe">Changer équipe</string>
    <string name="ajouterTache">Ajouter une tâche</string>
    <string name="listeMembres">Liste des membres</string>
    <string name="parametres">Paramètres</string>

    <string name="mail">tanguy.fenouillot@iut-rodez.fr</string>


</resources>