<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_black_24dp"
            android:title="@string/changerListe" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_group_24px"
            android:title="@string/changerEquipe" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/ajouterTache" />
        <item
            android:icon="@drawable/ic_groups_black_24dp"
            android:title="@string/listeMembres" />
        <item
            android:icon="@drawable/ic_settings_24px"
            android:title="@string/parametres" />
    </group>
</menu>